add nakamura citation

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -1374,3 +1374,14 @@ Unique-ID = {{ISI:A1975AT25100002}},
 	pages = {12754--12760},
 	file = {Lewin and Cramer - 2008 - Modified Carbon Pseudopotential for Use in ONIOM C.pdf:/home/yannick/Zotero/storage/B5QNMM7V/Lewin and Cramer - 2008 - Modified Carbon Pseudopotential for Use in ONIOM C.pdf:application/pdf}
 }
+@article{nakamura2018,
+	title = {Ultrafast Charge Transfer and Relaxation Dynamics in Polymer-Encapsulating Single-Walled Carbon Nanotubes: Polythiophene and Coronene Polymer},
+	author = {Nakamura, Arao and Yamanaka, Ken-ichi and Miyaura, Kenshi and Lim, Hong En and Matsuda, Kazunari and Thendie, Boanerges and Miyata, Yasumitsu and Kochi, Taketo and Okada, Susumu and Shinohara, Hisanori},
+	journal = {The Journal of Physical Chemistry C},
+	volume = {122},
+	number = {29},
+	pages = {16940-16949},
+	year = {2018},
+	doi = {10.1021/acs.jpcc.8b03757},
+}
+
