--- a/main.tex
+++ b/main.tex
@@ -392,7 +392,7 @@ as for the TD-DFT calculations.
 
 \section*{\sffamily \large Coronene encapsulated in a carbon nanotube}
 In a recent work, Nakamura \emph{et al.} have studied the photoexcitation
-spectrum of a coronene polymer encapsulated in a carbon nanotube.\cite{nakamura}
+spectrum of a coronene polymer encapsulated in a carbon nanotube.\cite{nakamura2018}
 In this work, they show that two absorption bands (at around 1.7 and 3.4 eV)
 lead to a charge transfer from the coronene polymer to the nanotube.
 This charge transfer process is backed up by DFT calculations in the plane wave formalism
