Adding the figure of the helicene in the SI

--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -271,6 +271,24 @@ framework.}
 \end{figure}
 
 \clearpage
+
+\section*{Helicene}
+
+We performed calculations on carbo-helicene molecules from 6 to 9 rings. Thier structures are
+shown in Figure~\ref{fig:helicene}.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=8cm]{helicene.eps}
+\end{center}
+\vspace{0.25in}
+\hspace*{3in}
+\caption{Scheme of the structure of (P)-helicenes computed in this work.}
+\label{fig:helicene}
+\end{figure}
+
+
+\clearpage
 \section*{B3-LYP Calculations}
 
 Here we report calculations with the B3LYP functional on the spectra of small rings and helicenes.
